# mieshah

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  help.py  pymieshah.py  pyproject.toml  readme.txt  specfile.py
TEST/: mieshah.py  test.py  test3.py
docs/: changelog.html  citation.html  index.html  pymieshah_documentation.html  reference.html  script.js  style.css  test_code_docs.html  usage.html
mieshah/: pymieshah.py
mieshah.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mieshah/TEST/: mie_test.py  mieshah.py  mieshah_basic.py  test.py  test2.py
mieshah/TEST/compare/: Hapke_5.7a.csv  mie1.out  mie2.csv  miepy1.py  miepy2.py  miepy3.py  readme.txt
paper/: paper.bib  paper.md
